# pcs-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.postgres  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/agentic_cleanup/: __init__.py  error_detection.py  orchestrator.py  retrieval.py  tools.py
app/agentic_cleanup/prompts/: error_detection.md  system_prompt.md
app/core/: __init__.py  config.py  database.py  dependencies.py  models.py  ollama_utils.py  security.py
app/interfaces/: __init__.py
app/interfaces/agentic_cleanup/: __init__.py  cleanup_orchestrator.py
app/interfaces/repositories/: __init__.py  entry_repository.py  page_repository.py  session_repository.py  user_repository.py
app/interfaces/services/: __init__.py  auth_service.py  entry_service.py  page_service.py  transcription_processing.py
app/repositories/: __init__.py  entry_repository.py  page_repository.py  session_repository.py  user_repository.py
app/routes/: __init__.py  auth_routes.py  cleanup_routes.py  entry_routes.py  page_routes.py
app/schemas/: __init__.py  auth.py  entry.py  page.py  transcription.py
app/services/: __init__.py  auth_service.py  entry_service.py  page_service.py  transcription_processing.py
docker/: init.sql
router/: admin_tools.py  file_storage.py  llm.py  login.py  schema.py
src/: auth.py  file_utils.py  psql_utils.py  utils.py
tests/: conftest.py  test_auth_service.py  test_entry_service.py  test_page_service.py  test_security.py
