[project]
name = "pcs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=23.2.1",
    "asyncpg>=0.29.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.1.0",
    "fastapi>=0.109.0",
    "httpx>=0.28.1",
    "lmstudio>=1.5.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]
